<resources>
    <string name="app_name">Bajrang Baan</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="chapterMenu">📖</string>
    <string name="chapterTitle">Chapter Title</string>
    <string name="bajrangBaan">बजरंग बाण</string>
    <string name="hanumanChalisa">हनुमान चालीसा</string>
    <string name="hanumanAarti">हनुमान आरती</string>
    <string name="sankatMochan">संकट मोचन</string>
    <string name="textSize">999</string>
    <string name="textErr">"Can't read text file…"</string>
</resources>