<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.sibansal.bajrangbaan.MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <ScrollView
                android:id="@+id/textScroll"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight="90"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textCanvas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:text="@string/app_name"/>
            </ScrollView>

        <LinearLayout
            android:id="@+id/zoomControlLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:textSize="15pt"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/fontSize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textSize"
                android:textSize="15pt"
                android:gravity="center_vertical|center_horizontal"
            />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:layout_weight="1"
                android:textSize="15pt"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>